--- a/style.css
+++ b/style.css
@@ -58,3 +58,27 @@ header{
     width: 60%;
     margin: 50px auto;
 }
+#search-section{
+    margin: 50px auto;
+    width: 80%;
+}
+#search-section > h2{
+    text-align: center;
+    margin-bottom: 20px;
+}
+#search-container{
+    border: 2px solid black;
+    width: 50%;
+    margin: 0 auto;
+    border-radius: 10px;
+    padding: 8px;
+    background-color: #F5F5DC;
+    display: flex;
+    justify-content: space-between;
+}
+#search-bar > input[type="text"] {
+    padding: 15px;
+    border: none;
+    outline: none;
+    background-color: #F5F5DC;
+}
