--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ header{
     display: flex;
     justify-content: space-between;
 }
+img{
+    max-width: 100%;
+    max-height: 100%;
+}
 .btn{
     border: none;
     background-color: rgb(65, 95, 248);
@@ -81,4 +85,52 @@ header{
     border: none;
     outline: none;
     background-color: #F5F5DC;
+}
+#card-section{
+    width: 80%;
+    margin: 50px auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+.card{
+    border: 1px solid darkgray;
+    border-radius: 10px;
+    padding: 20px;
+}
+.card-image{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+.card-image:hover{
+    background-color: rgb(229, 213, 214);
+    transition: 0.8s;
+}
+.card-image img{
+    height: 300px;
+}
+.card-title{
+    text-align: center;
+    font-size: 25px;
+    margin-bottom: 20px;
+}
+.card-description{
+    text-align: center;
+    margin-bottom: 20px;
+    color: rgb(124, 124, 124);
+}
+.card-price{
+    text-align: center;
+    font-weight: 600;
+    font-size: 25px;
+    margin-bottom: 20px;
+}
+.card-button{
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
 }
