--- a/style.css
+++ b/style.css
@@ -134,3 +134,34 @@ img{
     display: flex;
     justify-content: center;
 }
+footer{
+    background-color: #E4E0EC;
+    padding: 100px 100px;
+}
+#footer-head h1{
+    font-size: 40px;
+}
+#footer-head{
+    padding: 50px 50px;
+    display: flex;
+    justify-content: space-between;
+} 
+#hline{
+    border-top: 1px solid rgb(140, 138, 138);
+}
+#footer-nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    margin-top: 50px;
+  }
+#footer-nav> div{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+}
+#footer-nav div a {
+    text-decoration: none;
+    color: black;
+  }
